--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.mysql-connector-java-5.1.10-bin.jar=E:\\ITI\\soureces\\MY SQL\\mysql-connector-java-5.1.10\\mysql-connector-java-5.1.10-bin.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar=C:\\Users\\Al-Jazayeerly\\Desktop\\Hibernate Day 1\\Required\\mysql-connector-java-5.1.6-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${file.reference.mysql-connector-java-5.1.10-bin.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
