--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,6 +4,15 @@
         <servlet-name>SignIn</servlet-name>
         <servlet-class>boundary.SignIn</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LabsController</servlet-name>
+        <servlet-class>boundary.instructor.LabsController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>LabsController</servlet-name>
+        <url-pattern>/LabsController</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SignIn</servlet-name>
         <url-pattern>/SignIn</url-pattern>
