--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -46,4 +46,7 @@
             30
         </session-timeout>
     </session-config>
+    <welcome-file-list>
+        <welcome-file>signin.html</welcome-file>
+    </welcome-file-list>
 </web-app>
