--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,7 +16,10 @@
         <servlet-name>InstructorMainPage</servlet-name>
         <servlet-class>boundary.instructor.InstructorMainPage</servlet-class>
     </servlet>
-    
+    <servlet>
+        <servlet-name>UpdateGroup</servlet-name>
+        <servlet-class>adminServlets.UpdateGroup</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>InstructorMainPage</servlet-name>
         <url-pattern>/InstructorMainPage</url-pattern>
@@ -40,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>AddGroup</servlet-name>
         <url-pattern>/AddGroup</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateGroup</servlet-name>
+        <url-pattern>/UpdateGroup</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
