--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>UpdateGroup</servlet-name>
         <servlet-class>adminServlets.UpdateGroup</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>courseBoundary</servlet-name>
+        <servlet-class>boundary.instructor.courseBoundary</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>InstructorMainPage</servlet-name>
         <url-pattern>/InstructorMainPage</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>UpdateGroup</servlet-name>
         <url-pattern>/UpdateGroup</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>courseBoundary</servlet-name>
+        <url-pattern>/courseBoundary</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
