--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>courseBoundary</servlet-name>
         <servlet-class>boundary.instructor.courseBoundary</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LapPageInitiator</servlet-name>
+        <servlet-class>boundary.instructor.LapPageInitiator</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>InstructorMainPage</servlet-name>
         <url-pattern>/InstructorMainPage</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>courseBoundary</servlet-name>
         <url-pattern>/courseBoundary</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LapPageInitiator</servlet-name>
+        <url-pattern>/LapPageInitiator</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
